Fix tex-align Colonna-Full

--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ header {
     display: flex;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 
 
 }
